[package]
name = "htop-win"
version = "0.2.4"
edition = "2024"
description = "A Windows clone of htop - interactive process viewer"
authors = ["htop-win contributors"]
license = "MIT"
repository = "https://github.com/faratech/htop-win"
keywords = ["htop", "process", "monitor", "tui", "windows"]
categories = ["command-line-utilities", "os::windows-apis"]

[dependencies]
crossterm = { version = "0.29", default-features = false, features = ["events", "windows"] }
bitflags = "2"  # For Modifier flags
unicode-width = "0.2"
lexopt = "0.3"  # Lightweight arg parsing

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_Security",
    "Win32_System_Power",
    "Win32_System_SystemInformation",
    "Win32_System_Performance",
    "Win32_NetworkManagement_IpHelper",
    "Win32_NetworkManagement_Ndis",
    "Win32_UI_Shell",
    "Win32_System_Com",
    "Win32_Networking_WinHttp",
    "Wdk_System_SystemInformation",
    "Wdk_Graphics_Direct3D",
] }

[build-dependencies]
embed-resource = "3"

[profile.release]
opt-level = "z"      # Optimize for size
lto = true
codegen-units = 1
panic = "abort"      # Smaller binary, no unwinding
strip = true         # Strip symbols
